# matmul_examples

./: .gitignore  Blocked IJK bias performance analyses.ipynb  CMakeLists.txt  README.md  blocked_ijk_blas.c  blocked_kij_atlas.c  ijk.c  main.c  utils.c
